force-app/main/default/objects/Due_Diligence__c/Due_Diligence__c.object-meta.xml
<CustomObject>
    <label>Due Diligence</label>
    <nameField>
        <displayFormat>DD-{0000}</displayFormat>
        <label>Due Diligency Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Due Diligences</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>