force-app/main/default/objects/Due_Diligence__c/fields/A_del__c.field-meta.xml
<CustomField>
    <fullName>A_del__c</fullName>
    <formula>IMAGE(&quot;/sfc/servlet.shepherd/version/download/068N0000001X2oy&quot;,&quot;ample&quot; , 30, 30)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ample Color Image</label>
    <type>Text</type>
</CustomField>