force-app/main/default/objects/Due_Diligence__c/fields/Amber_RAG_Count__c.field-meta.xml
<CustomField>
    <fullName>Amber_RAG_Count__c</fullName>
    <label>Amber RAG Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>