force-app/main/default/objects/Due_Diligence__c/fields/Assets_Vs_Liability_Score__c.field-meta.xml
<CustomField>
    <fullName>Assets_Vs_Liability_Score__c</fullName>
    <formula>CASE(TEXT(  Assets_Vs_Liability_Rating__c ),
&apos;Exceed Expectations&apos;,  Assets_Vs_Liability_Weight__c *1,
 &apos;Meet Expectations&apos;,Assets_Vs_Liability_Weight__c *0.85,
&apos;Average&apos;,Assets_Vs_Liability_Weight__c *0.6,
&apos;High Risk&apos;,Assets_Vs_Liability_Weight__c *0.25,
0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Assets Vs Liability Score%</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>