force-app/main/default/objects/Due_Diligence__c/fields/Assets_Vs_Liability_Weight__c.field-meta.xml
<CustomField>
    <fullName>Assets_Vs_Liability_Weight__c</fullName>
    <defaultValue>2</defaultValue>
    <label>Assets Vs Liability Weight%</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>