force-app/main/default/objects/Due_Diligence__c/fields/Call_Support_Management_Overall_Weight__c.field-meta.xml
<CustomField>
    <fullName>Call_Support_Management_Overall_Weight__c</fullName>
    <formula>Ticketing_tools_process_Weight__c +  E_bonding_capabilities_Weight__c +  X24x7_call_center_HelpDesk_support_Weigh__c</formula>
    <label>Call Support/Management Overall Weight</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>