force-app/main/default/objects/Due_Diligence__c/fields/Company_Established__c.field-meta.xml
<CustomField>
    <fullName>Company_Established__c</fullName>
    <label>--------Company Established--------</label>
    <length>255</length>
    <type>Text</type>
</CustomField>