force-app/main/default/objects/Due_Diligence__c/fields/Company_Established_Score__c.field-meta.xml
<CustomField>
    <fullName>Company_Established_Score__c</fullName>
    <formula>CASE(TEXT( Company_Established_Rating__c ),
 &apos;Exceed Expectations&apos;, Company_Established_Weight__c *1,
 &apos;Meet Expectations&apos;,Company_Established_Weight__c *0.85,
&apos;Average&apos;,Company_Established_Weight__c *0.6,
&apos;High Risk&apos;,Company_Established_Weight__c*0.25,
0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Company Established Score%</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>