force-app/main/default/objects/Due_Diligence__c/fields/Company_Established_Weight__c.field-meta.xml
<CustomField>
    <fullName>Company_Established_Weight__c</fullName>
    <defaultValue>003</defaultValue>
    <label>Company Established Weight%</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>