force-app/main/default/objects/Due_Diligence__c/fields/Company_Overall_Weight__c.field-meta.xml
<CustomField>
    <fullName>Company_Overall_Weight__c</fullName>
    <formula>(Company_Established_Weight__c +  Employee_Strength_Weight__c + Quality_PC_SC_List_Weight__c  + Health_Safety_Processes_Weight__c) / 100</formula>
    <label>Company Overall Weight</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>