force-app/main/default/objects/Due_Diligence__c/fields/Company_Overview_RAG_del__c.field-meta.xml
<CustomField>
    <fullName>Company_Overview_RAG_del__c</fullName>
    <formula>IF( Overall9__c &lt;=5, R_del__c ,IF(Overall9__c &lt;=8,A_del__c,G_del__c )  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>RAG(Company Overview)</label>
    <type>Text</type>
</CustomField>