force-app/main/default/objects/Due_Diligence__c/fields/Consider_Call_Support_Flow_Management__c.field-meta.xml
<CustomField>
    <fullName>Consider_Call_Support_Flow_Management__c</fullName>
    <formula>OR(
!ISPICKVAL(Ticketing_tools_process_Rating__c,&apos;NA&apos;),
!ISPICKVAL(E_bonding_capabilities_Rating__c,&apos;NA&apos;),
!ISPICKVAL(X24x7_call_center_HelpDesk_support_Ratin__c,&apos;NA&apos;)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Consider Call Support Flow / Management</label>
    <type>Checkbox</type>
</CustomField>