force-app/main/default/objects/Due_Diligence__c/fields/Consider_Company_Overview__c.field-meta.xml
<CustomField>
    <fullName>Consider_Company_Overview__c</fullName>
    <formula>OR(
!ISPICKVAL(Company_Established_Rating__c,&apos;NA&apos;),
!ISPICKVAL(Quality_PC_SC_List_Rating__c,&apos;NA&apos;),
!ISPICKVAL(Employee_Strength_Rating__c,&apos;NA&apos;),
!ISPICKVAL(Health_Safety_Processes_Rating__c,&apos;NA&apos;)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Consider Company Overview</label>
    <type>Checkbox</type>
</CustomField>