force-app/main/default/objects/Due_Diligence__c/fields/Consider_Coverage_Point_of_Presence__c.field-meta.xml
<CustomField>
    <fullName>Consider_Coverage_Point_of_Presence__c</fullName>
    <formula>OR(
!ISPICKVAL(No_of_Countries_covered_direct_Rating__c,&apos;NA&apos;),
!ISPICKVAL(Point_of_presence_Rating__c,&apos;NA&apos;),
!ISPICKVAL(Future_plan_enhance_the_presence_Rating__c,&apos;NA&apos;)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Consider Coverage / Point of Presence</label>
    <type>Checkbox</type>
</CustomField>