force-app/main/default/objects/Due_Diligence__c/fields/Consider_Customer_Base__c.field-meta.xml
<CustomField>
    <fullName>Consider_Customer_Base__c</fullName>
    <formula>OR(
!ISPICKVAL(Customer_Base_Rating__c,&apos;NA&apos;),
!ISPICKVAL(Retention_of_the_customer_Rating__c,&apos;NA&apos;),
!ISPICKVAL(Referral_Customer_feedback_Rating__c,&apos;NA&apos;),
!ISPICKVAL(Referral_Customer_feedback_Rating__c,&apos;NA&apos;)

)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Consider Customer Base/Feedback</label>
    <type>Checkbox</type>
</CustomField>