force-app/main/default/objects/Due_Diligence__c/fields/Consider_Financial_Credibility__c.field-meta.xml
<CustomField>
    <fullName>Consider_Financial_Credibility__c</fullName>
    <formula>OR(
!ISPICKVAL(Revenue_Growth_for_last_3_years_Rating__c,&apos;NA&apos;),
!ISPICKVAL(Net_Margin_Growth_for_last_3_year_Rating__c,&apos;NA&apos;),
!ISPICKVAL(Assets_Vs_Liability_Rating__c,&apos;NA&apos;),
!ISPICKVAL(Financial_stability_or_Credit_Rating__c,&apos;NA&apos;)  
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Consider Financial Credibility</label>
    <type>Checkbox</type>
</CustomField>