force-app/main/default/objects/Due_Diligence__c/fields/Consider_Responses_Quality_of_Documents__c.field-meta.xml
<CustomField>
    <fullName>Consider_Responses_Quality_of_Documents__c</fullName>
    <formula>OR(
!ISPICKVAL(Responsiveness_Rating__c,&apos;NA&apos;),
!ISPICKVAL(Proactiveness_Rating__c,&apos;NA&apos;),
!ISPICKVAL(Quality_of_Communication_Documents_sub__c,&apos;NA&apos;),
!ISPICKVAL(Value_add_innovation_Rating__c,&apos;NA&apos;)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Consider Responses/ Quality of Documents</label>
    <type>Checkbox</type>
</CustomField>