force-app/main/default/objects/Due_Diligence__c/fields/Consider_Service_Delivery__c.field-meta.xml
<CustomField>
    <fullName>Consider_Service_Delivery__c</fullName>
    <formula>OR(
!ISPICKVAL(No_of_Field_Engineers_Rating__c,&apos;NA&apos;),
!ISPICKVAL(Skilled_Employees_Certification_Rating__c,&apos;NA&apos;),
!ISPICKVAL(OEM_Product_support_Rating__c,&apos;NA&apos;),
!ISPICKVAL(Maintenance_or_break_fix_support_Rating__c,&apos;NA&apos;),
!ISPICKVAL(Existing_Customer_Recommendations_Rating__c,&apos;NA&apos;),
!ISPICKVAL(Overall_delivery_capabilities_Rating__c,&apos;NA&apos;)

)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Consider Service Delivery</label>
    <type>Checkbox</type>
</CustomField>