force-app/main/default/objects/Due_Diligence__c/fields/Consider_SLA__c.field-meta.xml
<CustomField>
    <fullName>Consider_SLA__c</fullName>
    <formula>OR(
!ISPICKVAL(X2_hours_Fix_Resolution_Rating__c,&apos;NA&apos;),
!ISPICKVAL(X4_hours_Fix_Resolution_Rating__c,&apos;NA&apos;),
!ISPICKVAL(X8_hours_Fix_Resolution_Rating__c,&apos;NA&apos;),
!ISPICKVAL(NBD_Resolution_or_Others_Rating__c,&apos;NA&apos;)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Consider SLA</label>
    <type>Checkbox</type>
</CustomField>