force-app/main/default/objects/Due_Diligence__c/fields/Consider_Spare_Management__c.field-meta.xml
<CustomField>
    <fullName>Consider_Spare_Management__c</fullName>
    <formula>OR(
!ISPICKVAL(Current_spares_in_stock_Management__c,&apos;NA&apos;),
!ISPICKVAL(Warehouse_Management_Rating__c,&apos;NA&apos;),
!ISPICKVAL(OEM_model_Spare_replacement_Rating__c,&apos;NA&apos;),
!ISPICKVAL(Warranty_Out_of_warranty_support_Rating__c,&apos;NA&apos;)

)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Consider Spare Management</label>
    <type>Checkbox</type>
</CustomField>