force-app/main/default/objects/Due_Diligence__c/fields/Consider_Technical_Capability__c.field-meta.xml
<CustomField>
    <fullName>Consider_Technical_Capability__c</fullName>
    <formula>OR(
!ISPICKVAL(OEM_Partnership_Certification_Rating__c,&apos;NA&apos;),
!ISPICKVAL(Skilled_Employees_Certification_RatingTC__c,&apos;NA&apos;),
!ISPICKVAL(Technical_delivery_Matrix_Rating__c,&apos;NA&apos;),
!ISPICKVAL(Products_supported_Rating__c,&apos;NA&apos;)

)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Consider Technical Capability</label>
    <type>Checkbox</type>
</CustomField>