force-app/main/default/objects/Due_Diligence__c/fields/Coverage_Point_Presence_Overall_Weight__c.field-meta.xml
<CustomField>
    <fullName>Coverage_Point_Presence_Overall_Weight__c</fullName>
    <formula>No_of_Countries_covered_direct_Weight__c + Point_of_presence_Weight__c +  Future_plan_enhance_the_presence_Weight__c</formula>
    <label>Coverage Point Presence Overall Weight</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>