force-app/main/default/objects/Due_Diligence__c/fields/Current_spare_in_stock_Management_Score__c.field-meta.xml
<CustomField>
    <fullName>Current_spare_in_stock_Management_Score__c</fullName>
    <formula>CASE(TEXT(Current_spares_in_stock_Management__c ),
&apos;Exceed Expectations&apos;,  Current_spare_in_stock_Management_Weight__c *1,
 &apos;Meet Expectations&apos;,Current_spare_in_stock_Management_Weight__c *0.85,
&apos;Average&apos;,Current_spare_in_stock_Management_Weight__c *0.6,
&apos;High Risk&apos;,Current_spare_in_stock_Management_Weight__c *0.25,
0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Current spares in stock and Management Score</inlineHelpText>
    <label>Current spare in stock&amp;Management Score%</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>