force-app/main/default/objects/Due_Diligence__c/fields/Current_spare_in_stock_Management_Weight__c.field-meta.xml
<CustomField>
    <fullName>Current_spare_in_stock_Management_Weight__c</fullName>
    <defaultValue>$CustomMetadata.DD_Weightage__mdt.DD_Weightage21.Current_spare_in_stock_Management_Weigh__c</defaultValue>
    <label>Current spare in stock&amp;Management Weigh%</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>