force-app/main/default/objects/Due_Diligence__c/fields/Current_spares_in_stock_Management__c.field-meta.xml
<CustomField>
    <fullName>Current_spares_in_stock_Management__c</fullName>
    <inlineHelpText>Current spares in stock and Management Rating</inlineHelpText>
    <label>Current spares in stock &amp; Management</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Exceed Expectations</fullName>
            </value>
            <value>
                <fullName>Meet Expectations</fullName>
            </value>
            <value>
                <fullName>Average</fullName>
            </value>
            <value>
                <fullName>High Risk</fullName>
            </value>
            <value>
                <fullName>Not Ready for Partnership</fullName>
            </value>
            <value>
                <fullName>NA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>