force-app/main/default/objects/Due_Diligence__c/fields/Customer_Base_Feedback_Overall_Weight__c.field-meta.xml
<CustomField>
    <fullName>Customer_Base_Feedback_Overall_Weight__c</fullName>
    <formula>Customer_Base_Weight__c + Referral_Customer_feedback_Weight__c + Retention_of_the_customer_Weight__c +  No_of_High_value_customers_Weight__c</formula>
    <label>Customer Base / Feedback Overall Weight</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>