force-app/main/default/objects/Due_Diligence__c/fields/Customer_Base_Score__c.field-meta.xml
<CustomField>
    <fullName>Customer_Base_Score__c</fullName>
    <formula>CASE(TEXT(    Customer_Base_Rating__c ),
 &apos;Exceed Expectations&apos;,  Customer_Base_Weight__c *1,
 &apos;Meet Expectations&apos;,Customer_Base_Weight__c *0.85,
&apos;Average&apos;,Customer_Base_Weight__c *0.6,
&apos;High Risk&apos;,Customer_Base_Weight__c *0.25,
0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer Base Score%</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>