force-app/main/default/objects/Due_Diligence__c/fields/Customer_Base_Weight__c.field-meta.xml
<CustomField>
    <fullName>Customer_Base_Weight__c</fullName>
    <defaultValue>$CustomMetadata.DD_Weightage__mdt.DD_Weightage21.Customer_Base_Weight__c</defaultValue>
    <label>Customer Base Weight%</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>