force-app/main/default/objects/Due_Diligence__c/fields/E_bonding_capabilities_Score__c.field-meta.xml
<CustomField>
    <fullName>E_bonding_capabilities_Score__c</fullName>
    <formula>CASE(TEXT(    E_bonding_capabilities_Rating__c ),
&apos;Exceed Expectations&apos;,  E_bonding_capabilities_Weight__c *1,
 &apos;Meet Expectations&apos;,E_bonding_capabilities_Weight__c*0.85,
&apos;Average&apos;,E_bonding_capabilities_Weight__c*0.6,
&apos;High Risk&apos;,E_bonding_capabilities_Weight__c*0.25,
0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>E-bonding capabilities Score%</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>