force-app/main/default/objects/Due_Diligence__c/fields/E_bonding_capabilities_Weight__c.field-meta.xml
<CustomField>
    <fullName>E_bonding_capabilities_Weight__c</fullName>
    <defaultValue>$CustomMetadata.DD_Weightage__mdt.DD_Weightage21.E_bonding_capabilities_Weight__c</defaultValue>
    <label>E-bonding capabilities Weight%</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>