force-app/main/default/objects/Due_Diligence__c/fields/Employee_Strength__c.field-meta.xml
<CustomField>
    <fullName>Employee_Strength__c</fullName>
    <label>----------Employee Strength----------</label>
    <length>255</length>
    <type>Text</type>
</CustomField>