force-app/main/default/objects/Due_Diligence__c/fields/Employee_Strength_Score__c.field-meta.xml
<CustomField>
    <fullName>Employee_Strength_Score__c</fullName>
    <formula>CASE(TEXT(  Employee_Strength_Rating__c ),
&apos;Exceed Expectations&apos;,   Employee_Strength_Weight__c *1,
 &apos;Meet Expectations&apos;,Employee_Strength_Weight__c *0.85,
&apos;Average&apos;,Employee_Strength_Weight__c *0.6,
&apos;High Risk&apos;,Employee_Strength_Weight__c *0.25,
0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Employee Strength Score%</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>