force-app/main/default/objects/Due_Diligence__c/fields/Employee_Strength_Weight__c.field-meta.xml
<CustomField>
    <fullName>Employee_Strength_Weight__c</fullName>
    <defaultValue>$CustomMetadata.DD_Weightage__mdt.DD_Weightage21.Employee_Strength_Weight__c</defaultValue>
    <label>Employee Strength Weight%</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>