force-app/main/default/objects/Due_Diligence__c/fields/Existing_Customer_Recommendation_Weight__c.field-meta.xml
<CustomField>
    <fullName>Existing_Customer_Recommendation_Weight__c</fullName>
    <defaultValue>$CustomMetadata.DD_Weightage__mdt.DD_Weightage21.Existing_Customer_Recommendation_Weight__c</defaultValue>
    <label>Existing Customer Recommendation Weight%</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>