force-app/main/default/objects/Due_Diligence__c/fields/Existing_Customer_Recommendations_Score__c.field-meta.xml
<CustomField>
    <fullName>Existing_Customer_Recommendations_Score__c</fullName>
    <formula>CASE(TEXT(  Existing_Customer_Recommendations_Rating__c ),
 &apos;Exceed Expectations&apos;,2,
 &apos;Meet Expectations&apos;,2,
&apos;Average&apos;,2,
&apos;High Risk&apos;,1,
0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Existing Customer Recommendations Score%</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>