force-app/main/default/objects/Due_Diligence__c/fields/Existing_Score__c.field-meta.xml
<CustomField>
    <fullName>Existing_Score__c</fullName>
    <formula>CASE(TEXT(  Existing_Customer_Recommendations_Rating__c ),
&apos;Exceed Expectations&apos;,  Existing_Customer_Recommendation_Weight__c  *1,
 &apos;Meet Expectations&apos;,Existing_Customer_Recommendation_Weight__c  *0.85,
&apos;Average&apos;,Existing_Customer_Recommendation_Weight__c  *0.6,
&apos;High Risk&apos;,Existing_Customer_Recommendation_Weight__c  *0.25,
0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Existing Customer Recommendations Score%</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>