force-app/main/default/objects/Due_Diligence__c/fields/Financial_Credibility_Overall_Weight__c.field-meta.xml
<CustomField>
    <fullName>Financial_Credibility_Overall_Weight__c</fullName>
    <formula>(Revenue_Growth_for_last_3_year_Weight__c +  Net_Margin_Growth_for_last_3_year_Weigh__c +
 Assets_Vs_Liability_Weight__c +  Financial_stability_or_Credit_Weight__c ) / 100</formula>
    <label>Financial Credibility Overall  Weight</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>