force-app/main/default/objects/Due_Diligence__c/fields/Financial_stability_or_Credit_Score__c.field-meta.xml
<CustomField>
    <fullName>Financial_stability_or_Credit_Score__c</fullName>
    <formula>CASE(TEXT(  Financial_stability_or_Credit_Rating__c ),
&apos;Exceed Expectations&apos;,  Financial_stability_or_Credit_Weight__c *1,
 &apos;Meet Expectations&apos;,Financial_stability_or_Credit_Weight__c *0.85,
&apos;Average&apos;,Financial_stability_or_Credit_Weight__c *0.6,
&apos;High Risk&apos;,Financial_stability_or_Credit_Weight__c *0.25,
0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Financial stability or Credit Score%</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>