force-app/main/default/objects/Due_Diligence__c/fields/Financial_stability_or_Credit_Weight__c.field-meta.xml
<CustomField>
    <fullName>Financial_stability_or_Credit_Weight__c</fullName>
    <defaultValue>$CustomMetadata.DD_Weightage__mdt.DD_Weightage21.Financial_stability_or_Credit_Weight__c</defaultValue>
    <label>Financial stability or Credit Weight%</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>