force-app/main/default/objects/Due_Diligence__c/fields/FSM_Geo_Head__c.field-meta.xml
<CustomField>
    <fullName>FSM_Geo_Head__c</fullName>
    <label>FSM Geo Head</label>
    <length>255</length>
    <type>Text</type>
</CustomField>