force-app/main/default/objects/Due_Diligence__c/fields/Future_plan_enhance_the_presence_Score__c.field-meta.xml
<CustomField>
    <fullName>Future_plan_enhance_the_presence_Score__c</fullName>
    <formula>CASE(TEXT(  Future_plan_enhance_the_presence_Rating__c ),
&apos;Exceed Expectations&apos;,  Future_plan_enhance_the_presence_Weight__c *1,
 &apos;Meet Expectations&apos;,Future_plan_enhance_the_presence_Weight__c *0.85,
&apos;Average&apos;,Future_plan_enhance_the_presence_Weight__c *0.6,
&apos;High Risk&apos;,Future_plan_enhance_the_presence_Weight__c *0.25,
0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Future plan enhance the presence Score%</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>