force-app/main/default/objects/Due_Diligence__c/fields/Future_plan_enhance_the_presence_Weight__c.field-meta.xml
<CustomField>
    <fullName>Future_plan_enhance_the_presence_Weight__c</fullName>
    <defaultValue>2</defaultValue>
    <label>Future plan enhance the presence Weight%</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>