force-app/main/default/objects/Due_Diligence__c/fields/G_del__c.field-meta.xml
<CustomField>
    <fullName>G_del__c</fullName>
    <formula>IMAGE(&quot;/sfc/servlet.shepherd/version/download/068N0000001X2p3&quot;,&quot;green&quot; , 30, 30)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Green Color Image</label>
    <type>Text</type>
</CustomField>