force-app/main/default/objects/Due_Diligence__c/fields/Green_RAG_Count__c.field-meta.xml
<CustomField>
    <fullName>Green_RAG_Count__c</fullName>
    <label>Green RAG Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>