force-app/main/default/objects/Due_Diligence__c/fields/Health_Safety_Processes__c.field-meta.xml
<CustomField>
    <fullName>Health_Safety_Processes__c</fullName>
    <label>--------Health &amp; Safety Processes-------</label>
    <length>100</length>
    <type>Text</type>
</CustomField>