force-app/main/default/objects/Due_Diligence__c/fields/Health_Safety_Processes_Score__c.field-meta.xml
<CustomField>
    <fullName>Health_Safety_Processes_Score__c</fullName>
    <formula>CASE(TEXT(  Health_Safety_Processes_Rating__c ),
 &apos;Exceed Expectations&apos;,  Health_Safety_Processes_Weight__c *1,
 &apos;Meet Expectations&apos;,Health_Safety_Processes_Weight__c *0.85,
&apos;Average&apos;,Health_Safety_Processes_Weight__c *0.6,
&apos;High Risk&apos;,Health_Safety_Processes_Weight__c *0.25,
0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Health &amp; Safety Processes Score%</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>