force-app/main/default/objects/Due_Diligence__c/fields/Health_Safety_Processes_Weight__c.field-meta.xml
<CustomField>
    <fullName>Health_Safety_Processes_Weight__c</fullName>
    <defaultValue>2</defaultValue>
    <label>Health &amp; Safety Processes Weight%</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>