force-app/main/default/objects/Due_Diligence__c/fields/In_considered1__c.field-meta.xml
<CustomField>
    <fullName>In_considered1__c</fullName>
    <defaultValue>true</defaultValue>
    <label>In considered</label>
    <type>Checkbox</type>
</CustomField>