force-app/main/default/objects/Due_Diligence__c/fields/label10__c.field-meta.xml
<CustomField>
    <fullName>label10__c</fullName>
    <label>-----Maintenance fix support-----</label>
    <length>255</length>
    <type>Text</type>
</CustomField>