force-app/main/default/objects/Due_Diligence__c/fields/label11__c.field-meta.xml
<CustomField>
    <fullName>label11__c</fullName>
    <label>-----Existing Customer----</label>
    <length>255</length>
    <type>Text</type>
</CustomField>