force-app/main/default/objects/Due_Diligence__c/fields/label12__c.field-meta.xml
<CustomField>
    <fullName>label12__c</fullName>
    <label>-----Overall delivery capabilities-----</label>
    <length>255</length>
    <type>Text</type>
</CustomField>